# School2019

./: .gitignore  LICENSE  LINKS.md  README.md  environment.yml
Lecture/CodeOptimisationAndPythonWrappers/: 1-41.html  10-1-3605.html  10-2-1-3627.html  10-2-2-3633.html  10-2-3-3639.html  10-2-3625.html  10-2-4-3645.html  10-2-5-3651.html  10-2-6-3657.html  10-3-1-3674.html  10-3-2-3680.html  10-3-3-3686.html  10-3-3672.html  10-3-4-3692.html  10-3-5-3698.html  10-3-6-3704.html  10-3587.html  10-4-1-3722.html  10-4-2-3728.html  10-4-3-3734.html  10-4-3720.html  10-4-4-3740.html  10-4-5-3746.html  10-4-6-3752.html  10-5-1-3770.html  10-5-2-3776.html  10-5-3-3782.html  10-5-3768.html  10-5-4-3788.html  10-5-5-3794.html  10-5-6-3800.html  10-6-1-3820.html  10-6-2-3826.html  10-6-3-3832.html  10-6-3818.html  10-6-4-3838.html  10-6-5-3844.html  10-6-6-3850.html  10-7-1-3886.html  10-7-2-3932.html  (+233 more)
astropy/: README.md  astropy_hands_on.ipynb  astropy_hands_on_solutions.ipynb
c++/: README.md
cpp_intro/: README.md
cpp_intro/1_hello/: README.md  hello.cpp
cpp_intro/2_fibonacci/: README.md  solution_loop.cpp  solution_recursion.cpp  solution_vector.cpp
cpp_intro/2_types/: README.md
cpp_intro/3_fibonacci_lib/: README.md
cpp_intro/4_cmake/: README.md
cpp_intro/4_cmake/solution/: CMakeLists.txt
cpp_intro/5_commandline/solution/: CMakeLists.txt
cpp_intro/5_commandline/solution/apps/: main.cpp
cpp_intro/6_python/pybind11-cmake/: CMakeLists.txt  setup.py
cpp_intro/6_python/pybind11-cmake/src/: fibonacci.cpp
debug/: README.md  analysis.py  exception.py  exception_chain.py  point.py  silent_error.py
git/: Makefile  beamerthemevertex.sty  git.tex
julia/: README.md  TinyTemperatureLibrary-Julia.ipynb  TinyTemperatureLibrary-Python.ipynb
machine-learning/: README.md
matplotlib-publication-quality/: matplotlib_header.tex  plot.py  plot_before.py
numpy/: 1. NumPy Warming Up.ipynb  2. NumPy Exercises - Solutions.ipynb  2. NumPy Exercises.ipynb  3. Nearest Points Exercise - Solutions.ipynb  3. Nearest Points Exercise.ipynb  4. Binary Data - Solutions.ipynb  4. Binary Data.ipynb  Worksheet.ipynb
pandas/: 1. Pandas Warming Up.ipynb  2. Reading and Visualising Data - Solutions.ipynb  2. Reading and Visualising Data.ipynb  Worksheet.ipynb
practice/: explore-jupyter-answers.ipynb  explore-jupyter.ipynb  skyviewbot.ipynb
profile/: README.md  cash.prof  cash.py  compute.prof  compute.py  compute_and_io.py  compute_and_io.txt  memory_error.md  multi_core.py  spam.py
scipy/: alien_signal.txt  basics.ipynb  scipy_general.ipynb  solution_1.py  solution_3.py  solution_7.py
(+36 files in other folders)
